tests/sema/err_bad_condition.diag
err_bad_condition.ax:1:1: error: if condition must be bool, found 3
