tests/sema/err_bad_condition.ax
fn main():
    if 42:
        let x = 1
